# gaatestsimulationabc

./: .gitignore  CHANGELOG.md  CLAUDE_RULES.md  Makefile  README.md  index.html  personalization.js  pyproject.toml  requirements.txt  submit-assessment-enhanced.js  sw.js
config/: base_rates.yaml  correlation_matrices.yaml  domain_contexts.yaml  empirical_thresholds.yaml  irt_parameters.yaml  norming_tables.yaml  validation_thresholds.yaml
docs/: 20260309-v1spec-retrospective.md  20260320-v2-simulation-hardening-retrospective.md  20260420-causality-orientations-retrospective.md  20260420-coach-circumplex-retrospective.md  20260420-group-conscious-retrospective.md  20260420-passion-quality-retrospective.md  20260420-regulatory-style-retrospective.md  20260421-self-concordance-retrospective.md  20260421-self-concordance-trajectory-retrospective.md  20260422-coach-circumplex-scorer-retrospective.md  Gemfile  _config.yml  abc-assessment-spec.md  abq-coach-integration-spec.md  aspiration-index-supplement.md  audit-checklist.md  big-five-belbin-audit.md  causality-orientations-items-draft.md  coach-circumplex-items-draft.md  expected-utility-framework.md  external-review-package.md  final-breakdown-report.md  gold-standard-upgrade-plan.md  group-conscious-items-draft.md  howard-2024-implementation-plan.md  improvement-plan-personalization-engine.md  index.md  literature-review-activity-log.md  methods-audit.md  new-items-draft-v2.md  new-items-draft.md  passion-items-draft.md  phase-a-preregistration.md  phase-two-plan-instrument-expansion.md  prd-abc-integration.md  (+10 more)
(+170 files in other folders)
